kubernetes/clusters/home/apps/llm/open-webui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui
  namespace: llm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Open WebUI
    gethomepage.dev/group: AI
    gethomepage.dev/icon: open-webui.png
    gethomepage.dev/href: https://chat.syslabs.dev
    gethomepage.dev/podSelector: app.kubernetes.io/name=open-webui
    gethomepage.dev/statusStyle: "dot"
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`chat.syslabs.dev`)
      kind: Rule
      services:
        - name: open-webui
          port: 80
  tls: {}
